# datatune

./: .buildinfo  .gitignore  Agent.html  CNAME  DataLoaders.html  Filter.html  LICENSE  LLM.html  Map.html  Op.html  README.md  Reduce.html  dataset.html  emails.json  emails.py  entity.html  extra_column.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  script.py  search.html  searchindex.js  setup.py  streaming.html  view.html  workspace.html
.github/workflows/: docs.yml  tests.yml
_sources/: Agent.md  Filter.md  Map.md  Op.md  entity.md  index.md  view.md  workspace.md
_static/css/: custom.css
datatune/: __init__.py  api.py  config.py  constants.py  credentials.py  dataset.py  entity.py  exceptions.py  extra_column.py  logger.py  memory.py  operations.py  query.py  s3.py  serde.py  storage.py  stream.py  streaming.py  view.py  workspace.py
datatune/agent/: __init__.py  (+2 more)
docs/: Makefile  auto_doc_builder.py  dataset.html  entity.html  extra_column.html  extra_column.md  streaming.html  streaming.md  view.html  workspace.html  workspace.md
examples/: Getting_started.ipynb  agents.ipynb  azure_openai_datatune_example.ipynb  data_anonymization.ipynb  deduplication.ipynb  demo.py  ibis_core.ipynb  ollama_datatune_example.ipynb  sdk_example.ipynb  storage_example.py
tests/: ibis_core_test.py  test.py  test_agent.py  test_combination.py  test_dataset.py  test_error.py  test_filter.py  test_imports.py  test_indexing.py  test_map.py  test_optimized_batch_completion.py  test_parquetdataset.py  test_s3_storage.py  test_workspace.py
(+51 files in other folders)
